--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
   <meta name="theme-color" content="#161616" />
-  <title>Andrea Chimienti — CRO Expert</title>
+  <title>Andrea Chimienti — Portfolio</title>
 
   <!-- Font: Jakarta Sans (via Google Fonts: Plus Jakarta Sans) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
