--- a/index.html
+++ b/index.html
@@ -87,15 +87,19 @@
     <main>
       <!-- About (default open) -->
       <section id="panel-about" role="tabpanel" aria-labelledby="tab-about">
+        <div class="kicker">WHO AM I?</div>
         <p>
-          I help online stores grow revenue by improving the experience customers have before, during, and after checkout.
-          My work blends data, UX and messaging to remove friction and lift conversion rate.
+        My name is Andrea. I’m a 22-year-old Italian based in Romania, with two years of experience in e-commerce. <br>I entered online marketing through an early passion for video games, which sparked my interest in what I could build and optimize on a computer. I pick up new tools quickly and look for chances to apply them, continually expanding my skill set.
         </p>
-        <div class="kicker">What I typically do</div>
+        <p>
+          I help e-commerce brands grow revenue while keeping the same ad-spend by improving the experience customers have before, during, and after checkout.
+          My work includes highly analytical data, UX and messaging to remove friction and lift conversion rate.
+        </p>
+        <div class="kicker">HOW CAN I HELP YOU?</div>
         <ul>
-          <li>Audit funnels and product pages to find high‑impact opportunities.</li>
-          <li>Design and launch A/B tests across landing, PDP and checkout flows.</li>
-          <li>Map/email lifecycle and quick wins for retention.</li>
+          <li>Conduct a full-funnel, end-to-end customer journey audit to pinpoint friction and prioritize high-impact CX improvements.</li>
+          <li>Design and launch A/B tests across the entire customer journey, including pre-lander pages, landing pages, checkout pages, post-purchase pages.</li>
+          <li>Suggest new ideas based on thorough market research on what could be improved in the funnel for a smoother customer experience & higher conversion rate.</li>
           <li>Instrument analytics and tracking for trustworthy insights.</li>
         </ul>
         <p>
