--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     .tabs [role="tab"]{
       appearance:none; border:0; background:transparent; color: var(--muted);
       padding: 8px 14px; border-radius: 8px; font-weight: 600; cursor: pointer;
+      font-family: "Plus Jakarta Sans";
     }
     .tabs [role="tab"][aria-selected="true"]{ background:#262626; color: var(--text); }
     .tabs [role="tab"]:focus-visible{ outline: 2px solid #6aa6ff; outline-offset: 2px; }
@@ -93,14 +94,14 @@
             <p>
             My name is Andrea. I’m a 22-year-old Italian based in Romania, with two years of experience in e-commerce. <br>I entered online marketing through an early passion for video games, which sparked my interest in what I could build and optimize on a computer. I pick up new tools quickly and look for chances to apply them, continually expanding my skill set.
             </p>
-            <p>
-              I help e-commerce brands grow revenue while keeping the same ad-spend by improving the experience customers have before, during, and after checkout.
-              My work includes highly analytical data, UX and messaging to remove friction and lift conversion rate.
-            </p>
           </div>
           <img class="about-portrait" src="images/photo_2025-08-11_22-05-20.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
         </div>
         <div class="kicker">HOW CAN I HELP YOU?</div>
+        <p>
+            I help e-commerce brands grow revenue while keeping the same ad-spend by improving the experience customers have before, during, and after checkout.
+            My work includes highly analytical data, UX and messaging to remove friction and lift conversion rate.
+            </p>
         <ul>
           <li>Conduct a full-funnel, end-to-end customer journey audit to pinpoint friction and prioritize high-impact CX improvements.</li>
           <li>Design and launch A/B tests across the entire customer journey, including pre-lander pages, landing pages, checkout pages, post-purchase pages.</li>
@@ -109,7 +110,7 @@
         </ul>
         <p>
           Based on your goals, we can start with a fast CRO audit or a full test roadmap. 
-          When you're ready, <a href="#" data-open="contact">say hello</a>.
+          Whenever you're ready, <a href="#" data-open="contact">say hello</a>.
         </p>
       </section>
 
