--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       --surface: #1f1f1f;
       --border: #262626;
       --link: #d6e6ff;
+      --gap: 30px; /* For image gap */
     }
     *, *::before, *::after{ box-sizing: border-box; }
     html,body{ height:100%; }
@@ -60,9 +61,26 @@
     [hidden]{ display: none !important; }
 
     /* Simple content styling */
-    .kicker{ font-weight: 600; letter-spacing: .02em; text-transform: uppercase; font-size: 12px; color: var(--muted); font-family:"Plus Jakarta Sans", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
+    .kicker{ font-weight: 600; letter-spacing: .02em; text-transform: uppercase; font-size: 22px; color: var(--muted); font-family:"Plus Jakarta Sans", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
     ul{ padding-left: 18px; }
     li{ margin: 6px 0; }
+
+    .about-wrap {
+  display: flex;
+  align-items: flex-start;
+  gap: var(--gap);
+  margin-bottom: 24px;
+}
+
+    .about-text {
+  flex: 1;
+}
+
+    .about-portrait {
+  width: 200px;
+  border-radius: 10px;
+  flex-shrink: 0;
+}
 
     /* Nice selection + reduced motion */
     ::selection{ background: #2b4a7d; color: white; }
@@ -95,7 +113,7 @@
             My name is Andrea. I’m a 22-year-old Italian based in Romania, with two years of experience in e-commerce. <br>I entered online marketing through an early passion for video games, which sparked my interest in what I could build and optimize on a computer. I pick up new tools quickly and look for chances to apply them, continually expanding my skill set.
             </p>
           </div>
-          <img class="about-portrait" src="images/photo_2025-08-11_22-05-20.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
+          <img class="about-portrait" src="images/photo_updated.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
         </div>
         <div class="kicker">HOW CAN I HELP YOU?</div>
         <p>
