--- a/index.html
+++ b/index.html
@@ -106,31 +106,32 @@
     <main>
       <!-- About (default open) -->
       <section id="panel-about" role="tabpanel" aria-labelledby="tab-about">
-        <div class="about-wrap">
-          <div class="about-text">
-            <div class="kicker">WHO AM I?</div>
-            <p>
-            My name is Andrea. I’m a 22-year-old Italian based in Romania, with two years of experience in e-commerce. <br>I entered online marketing through an early passion for video games, which sparked my interest in what I could build and optimize on a computer. I pick up new tools quickly and look for chances to apply them, continually expanding my skill set.
-            </p>
-          </div>
-          <img class="about-portrait" src="images/photo_updated.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
-        </div>
-        <div class="kicker">HOW CAN I HELP YOU?</div>
-        <p>
-            I help e-commerce brands grow revenue while keeping the same ad-spend by improving the experience customers have before, during, and after checkout.
-            My work includes highly analytical data, UX and messaging to remove friction and lift conversion rate.
-            </p>
-        <ul>
-          <li>Conduct a full-funnel, end-to-end customer journey audit to pinpoint friction and prioritize high-impact CX improvements.</li>
-          <li>Design and launch A/B tests across the entire customer journey, including pre-lander pages, landing pages, checkout pages, post-purchase pages.</li>
-          <li>Suggest new ideas based on thorough market research on what could be improved in the funnel for a smoother customer experience & higher conversion rate.</li>
-          <li>Instrument analytics and tracking for trustworthy insights.</li>
-        </ul>
-        <p>
-          Based on your goals, we can start with a fast CRO audit or a full test roadmap. 
-          Whenever you're ready, <a href="#" data-open="contact">say hello</a>.
-        </p>
-      </section>
+  <div class="about-wrap">
+    <img class="about-portrait" src="images/photo_updated.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
+    <div class="about-text">
+      <div class="kicker">WHO AM I?</div>
+      <p>
+        My name is Andrea. I’m a 22-year-old Italian based in Romania, with two years of experience in e-commerce. <br>I entered online marketing through an early passion for video games, which sparked my interest in what I could build and optimize on a computer. I pick up new tools quickly and look for chances to apply them, continually expanding my skill set.
+      </p>
+    </div>
+  </div>
+  <!-- rest of the section remains unchanged -->
+  <div class="kicker">HOW CAN I HELP YOU?</div>
+  <p>
+    I help e-commerce brands grow revenue while keeping the same ad-spend by improving the experience customers have before, during, and after checkout.
+    My work includes highly analytical data, UX and messaging to remove friction and lift conversion rate.
+  </p>
+  <ul>
+    <li>Conduct a full-funnel, end-to-end customer journey audit to pinpoint friction and prioritize high-impact CX improvements.</li>
+    <li>Design and launch A/B tests across the entire customer journey, including pre-lander pages, landing pages, checkout pages, post-purchase pages.</li>
+    <li>Suggest new ideas based on thorough market research on what could be improved in the funnel for a smoother customer experience & higher conversion rate.</li>
+    <li>Instrument analytics and tracking for trustworthy insights.</li>
+  </ul>
+  <p>
+    Based on your goals, we can start with a fast CRO audit or a full test roadmap. 
+    Whenever you're ready, <a href="#" data-open="contact">say hello</a>.
+  </p>
+</section>
 
       <!-- Work Experience (placeholder) -->
       <section id="panel-experience" role="tabpanel" aria-labelledby="tab-experience" hidden>
