--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     .about-wrap {
   display: flex;
+      flex-direction: row;
   align-items: flex-start;
   gap: var(--gap);
   margin-bottom: 24px;
@@ -77,9 +78,10 @@
 }
 
     .about-portrait {
-  width: 200px;
+  width: 150px;
   border-radius: 10px;
-  flex-shrink: 0;
+       flex-shrink: 0; /* Prevent image from shrinking */
+  order: -1; /* Ensure image is first in flex order */
 }
 
     /* Nice selection + reduced motion */
@@ -105,7 +107,7 @@
 
     <main>
       <!-- About (default open) -->
-      <section id="panel-about" role="tabpanel" aria-labelledby="tab-about">
+     <section id="panel-about" role="tabpanel" aria-labelledby="tab-about">
   <div class="about-wrap">
     <img class="about-portrait" src="images/photo_updated.jpg" alt="Andrea Chimienti" width="200" loading="lazy" />
     <div class="about-text">
