--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </ul>
   <p>
     Based on your goals, we can start with a fast CRO audit or a full test roadmap. 
-    Whenever you're ready, <a href="#" data-open="contact">say hello</a>.
+    Whenever you're ready, <a href="#contact" data-open="contact">say hello</a>.
   </p>
 </section>
 
