--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       --gap: 30px; /* For image gap */
     }
     *, *::before, *::after{ box-sizing: border-box; }
-    html,body{ height:100%; }
+    html,body{ min-height:100%; }
     body{
       margin:0;
       font-family: "Plus Jakarta Sans", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
@@ -103,6 +103,38 @@
 .xp-bullets{ margin:8px 0 0; padding-left:18px; }
 .xp-bullets li{ margin:4px 0; }
 @media (max-width:700px){ .xp-item{ grid-template-columns:1fr; } }
+
+    /* Get in touch */
+.contact-list{
+  list-style:none; padding:0; margin:12px 0 0;
+  display:grid; gap:14px;
+}
+@media (min-width:720px){
+  .contact-list{ grid-template-columns:repeat(3,minmax(0,1fr)); }
+}
+.contact-cta{
+  display:flex; align-items:center; justify-content:space-between;
+  text-decoration:none; padding:16px 18px; border-radius:12px;
+  background: var(--surface, #1b1b1b);
+  border:1px solid var(--border, #2a2a2a);
+  color:#e8e8e8; font-weight:600;
+  transition: transform .06s ease, box-shadow .2s ease, border-color .2s ease;
+}
+.contact-cta--primary{
+  /* subtle highlight/shine */
+  background:
+    linear-gradient(#1b1b1b, #1b1b1b) padding-box,
+    linear-gradient(135deg, #7cc1ff, #b58cff, #8ef3a0) border-box;
+  border:1px solid transparent;
+}
+.contact-cta:hover{
+  transform: translateY(-1px);
+  box-shadow: 0 8px 24px rgba(0,0,0,.45);
+}
+.contact-cta .label{ display:flex; align-items:center; gap:12px; }
+.contact-cta svg{ width:20px; height:20px; opacity:.9; flex:0 0 20px; }
+.contact-cta .arrow{ opacity:.6; margin-left:12px; }
+
   </style>
 </head>
 <body>
@@ -202,16 +234,86 @@
 
       <!-- Skillset (placeholder) -->
       <section id="panel-skillset" role="tabpanel" aria-labelledby="tab-skillset" hidden>
-        <p class="lede">List your go‑to tools, methods and platforms. We can turn this into neat bullet groups.</p>
+        <div class="skills">
+          <div class="kicker">ABOUT MY WORK</div>
+          <ul class="skill-list">
+            <li>Deeply data‑driven.</li>
+            <li>Conversion rate optimization grounded in customer psychology.</li>
+            <li>Conduct rigorous qualitative and quantitative research to understand customer psychology and target personas.</li>
+            <li>Comfort with the usage of HTML, CSS and Javascript coding </li>
+            <li>Proficient with e‑commerce platforms and tooling
+              <ul class="sub">
+                <li><strong>Platforms/CRMs:</strong> Shopify, Funnelish, CheckoutChamp, Tagadatpay, Sticky.io</li>
+                <li><strong>Other tools:</strong> VTURB, Namecheap, Wix, YondaTax, TaxJar, n8n, Shopify Flows, Google Sheets, ClickUp &amp; more</li>
+              </ul>
+            </li>
+          </ul>
+
+          <div class="kicker">ABOUT ME</div>
+          <ul class="skill-list">
+            <li>Fast learner.</li>
+            <li>Highly adaptable.</li>
+            <li>Collaborative team player with clear, proactive communication.</li>
+            <li>Professional, detail‑oriented, and proud of my craft.</li>
+          </ul>
+        </div>
       </section>
 
       <!-- Contact -->
-      <section id="panel-contact" role="tabpanel" aria-labelledby="tab-contact" hidden>
-        <p>
-          Prefer email? <a href="mailto:andrea@example.com">andrea@example.com</a><br />
-          Or drop a short brief and a link to your store. I’ll reply within 1–2 business days.
-        </p>
-      </section>
+      <section id="panel-contact" role="tabpanel" aria-labelledby="tab-contact">
+  <div class="kicker">Get in touch</div>
+
+  <ul class="contact-list">
+    <li>
+      <a class="contact-cta contact-cta--primary"
+         href="https://calendly.com/and-chimienti/cro-discovery-call"
+         target="_blank" rel="noopener">
+        <span class="label">
+          <!-- calendar icon -->
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <rect x="3" y="4" width="18" height="18" rx="2"></rect>
+            <line x1="8" y1="2" x2="8" y2="6"></line>
+            <line x1="16" y1="2" x2="16" y2="6"></line>
+            <line x1="3" y1="10" x2="21" y2="10"></line>
+          </svg>
+          Discovery call
+        </span>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="contact-cta contact-cta--primary"
+         href="mailto:and.chimienti@gmail.com">
+        <span class="label">
+          <!-- mail icon -->
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"></path>
+            <polyline points="22,8 12,14 2,8"></polyline>
+          </svg>
+          Email
+        </span>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="contact-cta contact-cta--primary"
+         href="https://t.me/andchimi" target="_blank" rel="noopener">
+        <span class="label">
+          <!-- paper plane icon -->
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M22 2L11 13"></path>
+            <path d="M22 2l-7 20-4-9-9-4 20-7z"></path>
+          </svg>
+          Telegram
+        </span>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+  </ul>
+</section>
+
     </main>
   </div>
 
