--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
       <!-- Contact -->
       <section id="panel-contact" role="tabpanel" aria-labelledby="tab-contact">
-  <div class="kicker">Get in touch</div>
+  <div class="kicker">Contact</div>
 
   <ul class="contact-list">
     <li>
