--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     .contact-cta .label{ display:flex; align-items:center; gap:12px; }
     .contact-cta svg{ width:20px; height:20px; opacity:.9; flex:0 0 20px; }
     .contact-cta .arrow{ opacity:.6; margin-left:12px; }
+
+    @media screen and (max-width: 478px) {.about-wrap {display: grid;}}
   </style>
 </head>
 <body>
