--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Data‑Driven CRO for E‑Commerce | Your Name</title>
   <meta name="description" content="I help e‑commerce brands turn traffic into revenue with research‑driven conversion rate optimization, experimentation programs, and high‑performing landing pages." />
-  <meta name="theme-color" content="#0f2f2a" />
+  <meta name="theme-color" content="#ffffff" />
   <meta property="og:title" content="Data‑Driven CRO for E‑Commerce | Your Name" />
   <meta property="og:description" content="Research‑driven CRO for DTC & e‑commerce brands: audits, A/B testing programs, landing pages, and analytics. Minimal, modern, fast." />
   <meta property="og:type" content="website" />
@@ -25,21 +25,25 @@
   <style>
     /* =============================
        Minimal, modern single-file site
-       Colors: Dark Green + Orange
+       Background: White
+       Accent Colors: Dark Green + Orange
        Font: Plus Jakarta Sans
        ============================= */
     :root{
-      --green-900:#0f2f2a; /* page bg (very dark green) */
-      --green-800:#163a33; /* surfaces */
-      --green-700:#1e4a42; /* cards */
+      /* Core palette */
+      --bg:#ffffff; /* page background */
+      --green-900:#0f2f2a; /* primary text / headings (dark green) */
+      --green-700:#1e4a42; /* strong accents */
       --green-600:#265a51; /* accents */
-      --green-300:#8fb8ae; /* muted accents */
-      --text:#eaf3f0;       /* off-white */
-      --muted:#b8ccc5;      /* muted text */
-      --border:#22443d;     /* hairlines */
-      --orange-500:#ff7a00; /* primary accent */
-      --orange-600:#e46e00; /* hover */
-      --shadow: 0 10px 30px rgba(0,0,0,.25);
+      --green-300:#8fb8ae; /* subtle accents */
+      --green-100:#f6fbf9; /* very light tint */
+      --text:var(--green-900);
+      --muted:#5f7a73;      /* muted text on white */
+      --border:#e2eee9;      /* light hairlines on white */
+      --orange-500:#ff7a00;  /* primary accent */
+      --orange-600:#e46e00;  /* hover */
+
+      --shadow: 0 10px 30px rgba(10, 20, 18, .08);
       --radius: 16px;
       --radius-sm: 12px;
       --w: clamp(16rem, 92vw, 1120px);
@@ -55,7 +59,7 @@
 
     html{scroll-behavior:smooth}
     *,*::before,*::after{box-sizing:border-box}
-    body{margin:0;background:var(--green-900);color:var(--text);font-family:var(--font-sans);font-size:var(--fs-base);line-height:1.6}
+    body{margin:0;background:var(--bg);color:var(--text);font-family:var(--font-sans);font-size:var(--fs-base);line-height:1.6}
 
     .container{width:var(--w);margin-inline:auto;padding-inline:1.25rem}
     .section{padding: clamp(3rem, 6vw, 6rem) 0}
@@ -63,7 +67,7 @@
     .kicker{display:inline-flex;align-items:center;gap:.6rem;color:var(--muted);font-size:var(--fs-sm)}
     .kicker .dot{width:.45rem;height:.45rem;border-radius:50%;background:var(--orange-500);display:inline-block}
 
-    h1,h2,h3{line-height:1.2;margin:0 0 .5em}
+    h1,h2,h3{line-height:1.2;margin:0 0 .5em;color:var(--green-900)}
     h1{font-size:var(--fs-2xl);letter-spacing:-.01em}
     h2{font-size:var(--fs-xl);letter-spacing:-.01em}
     h3{font-size:var(--fs-lg)}
@@ -71,34 +75,34 @@
     .muted{color:var(--muted)}
 
     a{color:inherit}
-    .button{appearance:none;border:0;cursor:pointer;display:inline-flex;align-items:center;gap:.6rem;border-radius:999px;padding:.85rem 1.15rem;font-weight:600;letter-spacing:.01em;text-decoration:none;transition:transform .15s ease, background .15s ease}
+    .button{appearance:none;border:0;cursor:pointer;display:inline-flex;align-items:center;gap:.6rem;border-radius:999px;padding:.85rem 1.15rem;font-weight:700;letter-spacing:.01em;text-decoration:none;transition:transform .15s ease, background .15s ease, border-color .15s ease}
     .button:active{transform:translateY(1px)}
-    .button--primary{background:var(--orange-500);color:#0b0f0e}
+    .button--primary{background:var(--orange-500);color:#fff}
     .button--primary:hover{background:var(--orange-600)}
-    .button--ghost{background:transparent;border:1px solid var(--border);color:var(--text)}
-    .button--ghost:hover{border-color:var(--orange-500);color:var(--text)}
+    .button--ghost{background:#fff;border:1px solid var(--green-300);color:var(--green-700)}
+    .button--ghost:hover{border-color:var(--orange-500);color:var(--green-900)}
 
-    /* Header */
-    .header{position:sticky;top:0;z-index:100;background:linear-gradient(180deg, rgba(15,47,42,.9), rgba(15,47,42,.6) 60%, rgba(15,47,42,0));backdrop-filter:saturate(1.2) blur(8px)}
+    /* Header on white */
+    .header{position:sticky;top:0;z-index:100;background:rgba(255,255,255,.9);backdrop-filter:saturate(1.2) blur(8px);border-bottom:1px solid var(--border)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:.85rem 0}
     .brand{display:flex;align-items:center;gap:.75rem;text-decoration:none}
-    .logo{width:36px;height:36px;border-radius:10px;background:radial-gradient(120% 120% at 30% 20%, #ff9a3c 0%, #ff7a00 40%, #e86f00 70%);box-shadow:0 3px 14px rgba(255,122,0,.35)}
-    .brand .name{font-weight:800;letter-spacing:.01em}
+    .logo{width:36px;height:36px;border-radius:10px;background:radial-gradient(120% 120% at 30% 20%, #ff9a3c 0%, #ff7a00 40%, #e86f00 70%);box-shadow:0 3px 14px rgba(255,122,0,.25)}
+    .brand .name{font-weight:800;letter-spacing:.01em;color:var(--green-900)}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.55rem .75rem;border-radius:999px;color:var(--muted);text-decoration:none}
-    .nav-links a:hover{color:var(--text)}
+    .nav-links a:hover{color:var(--green-900)}
     .nav-cta{display:none}
 
     .burger{display:none;flex-direction:column;gap:4px;background:transparent;border:0}
-    .burger span{width:22px;height:2px;background:var(--text);display:block;border-radius:2px}
+    .burger span{width:22px;height:2px;background:var(--green-900);display:block;border-radius:2px}
 
     @media (max-width: 900px){
       .nav-links{display:none}
       .nav-cta{display:none}
       .burger{display:flex}
-      .mobile-menu{display:none;position:fixed;inset:0;background:rgba(15,47,42,.95);backdrop-filter:blur(6px);padding:7rem 1.5rem 2rem}
+      .mobile-menu{display:none;position:fixed;inset:0;background:rgba(255,255,255,.98);backdrop-filter:blur(6px);padding:7rem 1.5rem 2rem;border-top:1px solid var(--border)}
       .mobile-menu.open{display:block}
-      .mobile-menu a{display:block;padding:1rem;border-bottom:1px solid var(--border);color:var(--text);text-decoration:none}
+      .mobile-menu a{display:block;padding:1rem;border-bottom:1px solid var(--border);color:var(--green-900);text-decoration:none}
       .mobile-menu .cta{margin-top:1rem}
     }
 
@@ -107,10 +111,10 @@
     .hero .grid{display:grid;grid-template-columns: 1.1fr .9fr;gap: clamp(1.25rem, 3vw, 2.5rem);align-items:center}
     .hero p{color:var(--muted)}
     .hero .actions{display:flex;gap:.75rem;flex-wrap:wrap;margin-top:1rem}
-    .hero-card{background:linear-gradient(180deg, var(--green-800), var(--green-700));border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
+    .hero-card{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
     .metrics{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:1rem;margin-top:1.25rem}
-    .metric{background:var(--green-800);border:1px solid var(--border);border-radius:var(--radius);padding:1rem;text-align:center}
-    .metric strong{display:block;font-size:1.6rem;letter-spacing:-.01em}
+    .metric{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;text-align:center;box-shadow:var(--shadow)}
+    .metric strong{display:block;font-size:1.6rem;letter-spacing:-.01em;color:var(--green-900)}
 
     @media (max-width: 900px){
       .hero .grid{grid-template-columns:1fr}
@@ -124,10 +128,10 @@
       .grid-2{grid-template-columns:1fr}
     }
 
-    .card{background:linear-gradient(180deg, var(--green-800), var(--green-700));border:1px solid var(--border);border-radius:var(--radius);padding:1.25rem}
+    .card{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1.25rem;box-shadow:var(--shadow)}
     .card h3{margin-bottom:.4rem}
     .card p{color:var(--muted)}
-    .chip{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--border);border-radius:999px;padding:.35rem .6rem;font-size:var(--fs-xs);color:var(--muted)}
+    .chip{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--border);border-radius:999px;padding:.35rem .6rem;font-size:var(--fs-xs);color:var(--green-700)}
     .chip .dot{width:.4rem;height:.4rem;border-radius:50%;background:var(--orange-500)}
 
     /* Process timeline */
@@ -138,33 +142,33 @@
 
     /* Case studies */
     .case .result{display:flex;gap:.5rem;flex-wrap:wrap;margin:.5rem 0 0}
-    .case .result .pill{background:rgba(255,122,0,.1);border:1px solid rgba(255,122,0,.25);color:#ffd7b3;border-radius:999px;padding:.35rem .6rem;font-size:var(--fs-xs)}
+    .case .result .pill{background:rgba(255,122,0,.06);border:1px solid rgba(255,122,0,.25);color:var(--orange-600);border-radius:999px;padding:.35rem .6rem;font-size:var(--fs-xs)}
     .case .foot{display:flex;align-items:center;justify-content:space-between;margin-top:1rem;border-top:1px dashed var(--border);padding-top:.75rem}
 
     /* Testimonials */
-    .testimonial{background:linear-gradient(180deg, var(--green-800), var(--green-700));border:1px solid var(--border);border-radius:var(--radius);padding:1rem}
+    .testimonial{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
     .testimonial .who{display:flex;align-items:center;gap:.75rem;margin-top:.75rem;color:var(--muted)}
-    .avatar{width:36px;height:36px;border-radius:50%;background:linear-gradient(180deg,#2a574f,#163a33);display:grid;place-items:center;font-weight:700}
+    .avatar{width:36px;height:36px;border-radius:50%;background:linear-gradient(180deg,#e7f3f0,#cfe6df);display:grid;place-items:center;font-weight:700;color:var(--green-700)}
 
     /* FAQ */
-    details{background:linear-gradient(180deg, var(--green-800), var(--green-700));border:1px solid var(--border);border-radius:var(--radius);padding:1rem}
+    details{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
     details+details{margin-top:.75rem}
     summary{cursor:pointer;font-weight:600}
     summary::marker{color:var(--orange-500)}
 
     /* Contact */
     .form{display:grid;gap:.75rem}
-    .input{width:100%;padding:.85rem;border-radius:12px;border:1px solid var(--border);background:rgba(255,255,255,.02);color:var(--text)}
+    .input{width:100%;padding:.85rem;border-radius:12px;border:1px solid var(--border);background:#fff;color:var(--text)}
     .input::placeholder{color:#8eb1a7}
     .form .row{display:grid;grid-template-columns:repeat(2, minmax(0,1fr));gap:.75rem}
     @media (max-width:700px){.form .row{grid-template-columns:1fr}}
-    .success{display:none;margin-top:.75rem;padding:.75rem;border:1px solid rgba(28,173,115,.35);background:rgba(28,173,115,.1);border-radius:12px}
+    .success{display:none;margin-top:.75rem;padding:.75rem;border:1px solid rgba(28,173,115,.35);background:rgba(28,173,115,.08);border-radius:12px;color:var(--green-700)}
 
     /* About photo */
     .about-photo{width:100%;height:auto;border-radius:20px;border:1px solid var(--border);box-shadow:var(--shadow);object-fit:cover}
 
     /* Footer */
-    footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted)}
+    footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted);background:#fff}
 
     /* Subtle extras */
     .hairline{border-top:1px solid var(--border)}
@@ -536,4 +540,45 @@
     const io = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if(entry.isIntersecting){
-          const el = entry.target
+          const el = entry.target;
+          const target = Number(el.getAttribute('data-target')) || 0;
+          let start = null; const dur = 1000 + Math.random()*600;
+          const step = (t) => {
+            if(!start) start = t;
+            const p = Math.min((t - start)/dur, 1);
+            const val = p * target;
+            format(el, val);
+            if(p < 1) requestAnimationFrame(step);
+          };
+          requestAnimationFrame(step);
+          io.unobserve(el);
+        }
+      })
+    }, {threshold:.6});
+    counters.forEach(c => io.observe(c));
+
+    // Contact form fake handler (no backend)
+    const form = document.getElementById('contactForm');
+    const success = document.getElementById('formSuccess');
+    form?.addEventListener('submit', (e) => {
+      e.preventDefault();
+      success.style.display = 'block';
+      form.reset();
+    });
+
+    // Copy email helper — replace with your email
+    const email = 'hello@yourdomain.com';
+    document.getElementById('copyEmail')?.addEventListener('click', async () => {
+      try{
+        await navigator.clipboard.writeText(email);
+        const btn = document.getElementById('copyEmail');
+        const original = btn.textContent; btn.textContent = 'Copied!';
+        setTimeout(()=> btn.textContent = original, 1500);
+      }catch(err){ alert('Email: ' + email); }
+    });
+
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
