--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data‑Driven CRO for E‑Commerce | Your Name</title>
+  <title>Data‑Driven CRO for E‑Commerce | Andrea Chimienti</title>
   <meta name="description" content="I help e‑commerce brands turn traffic into revenue with research‑driven conversion rate optimization, experimentation programs, and high‑performing landing pages." />
   <meta name="theme-color" content="#ffffff" />
-  <meta property="og:title" content="Data‑Driven CRO for E‑Commerce | Your Name" />
+  <meta property="og:title" content="Data‑Driven CRO for E‑Commerce | Andrea Chimienti" />
   <meta property="og:description" content="Research‑driven CRO for DTC & e‑commerce brands: audits, A/B testing programs, landing pages, and analytics. Minimal, modern, fast." />
   <meta property="og:type" content="website" />
   <!-- If publishing to GitHub Pages, replace <your-username> below with your GitHub username -->
@@ -46,7 +46,8 @@
       --shadow: 0 10px 30px rgba(10, 20, 18, .08);
       --radius: 16px;
       --radius-sm: 12px;
-      --w: clamp(16rem, 92vw, 1120px);
+      /* Slightly wider layout (≈90% width, larger max) */
+      --w: clamp(16rem, 90vw, 1280px);
 
       --font-sans: "Plus Jakarta Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
       --fs-xs: clamp(.75rem, .7rem + .2vw, .85rem);
@@ -86,35 +87,24 @@
     .header{position:sticky;top:0;z-index:100;background:rgba(255,255,255,.9);backdrop-filter:saturate(1.2) blur(8px);border-bottom:1px solid var(--border)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:.85rem 0}
     .brand{display:flex;align-items:center;gap:.75rem;text-decoration:none}
-    .logo{width:36px;height:36px;border-radius:10px;background:radial-gradient(120% 120% at 30% 20%, #ff9a3c 0%, #ff7a00 40%, #e86f00 70%);box-shadow:0 3px 14px rgba(255,122,0,.25)}
-    .brand .name{font-weight:800;letter-spacing:.01em;color:var(--green-900)}
+    /* Brand name only (no logo square) */
+    .brand .name{font-weight:800;letter-spacing:1.8px;color:var(--green-900);text-transform:uppercase}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.55rem .75rem;border-radius:999px;color:var(--muted);text-decoration:none}
     .nav-links a:hover{color:var(--green-900)}
     .nav-cta{display:none}
 
-    .burger{display:none;flex-direction:column;gap:4px;background:transparent;border:0}
-    .burger span{width:22px;height:2px;background:var(--green-900);display:block;border-radius:2px}
-
-    @media (max-width: 900px){
-      .nav-links{display:none}
-      .nav-cta{display:none}
-      .burger{display:flex}
-      .mobile-menu{display:none;position:fixed;inset:0;background:rgba(255,255,255,.98);backdrop-filter:blur(6px);padding:7rem 1.5rem 2rem;border-top:1px solid var(--border)}
-      .mobile-menu.open{display:block}
-      .mobile-menu a{display:block;padding:1rem;border-bottom:1px solid var(--border);color:var(--green-900);text-decoration:none}
-      .mobile-menu .cta{margin-top:1rem}
-    }
+    /* No burger / mobile overlay menu */
 
     /* Hero */
     .hero{padding: clamp(2.5rem, 4vw, 4rem) 0 clamp(3rem, 8vw, 7rem);position:relative}
     .hero .grid{display:grid;grid-template-columns: 1.1fr .9fr;gap: clamp(1.25rem, 3vw, 2.5rem);align-items:center}
     .hero p{color:var(--muted)}
     .hero .actions{display:flex;gap:.75rem;flex-wrap:wrap;margin-top:1rem}
-    .hero-card{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
     .metrics{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:1rem;margin-top:1.25rem}
     .metric{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;text-align:center;box-shadow:var(--shadow)}
     .metric strong{display:block;font-size:1.6rem;letter-spacing:-.01em;color:var(--green-900)}
+    .hero-portrait{width:200px;height:auto;border-radius:500px;border:1px solid var(--border);box-shadow:var(--shadow);display:block;margin-inline:auto}
 
     @media (max-width: 900px){
       .hero .grid{grid-template-columns:1fr}
@@ -186,8 +176,7 @@
   <header class="header" aria-label="Site header">
     <div class="container nav" role="navigation" aria-label="Primary">
       <a class="brand" href="#top" aria-label="Home">
-        <span class="logo" aria-hidden="true"></span>
-        <span class="name">Your Name</span>
+        <span class="name">ANDREA CHIMIENTI</span>
       </a>
       <nav class="nav-links" aria-label="Main">
         <a href="#services">Services</a>
@@ -199,19 +188,6 @@
       <div class="nav-cta">
         <a class="button button--primary" href="#contact">Book a call</a>
       </div>
-      <button class="burger" aria-label="Open menu" aria-expanded="false" id="burger">
-        <span></span><span></span><span></span>
-      </button>
-    </div>
-    <div class="mobile-menu" id="mobileMenu">
-      <a href="#services">Services</a>
-      <a href="#process">Process</a>
-      <a href="#work">Work</a>
-      <a href="#about">About</a>
-      <a href="#faq">FAQ</a>
-      <div class="cta">
-        <a class="button button--primary" href="#contact">Book a call</a>
-      </div>
     </div>
   </header>
 
@@ -221,7 +197,7 @@
       <div class="container grid">
         <div>
           <span class="kicker"><span class="dot"></span>Conversion Rate Optimization</span>
-          <h1>Data‑Driven CRO for E‑Commerce Brands</h1>
+          <h1>Squeeze the most amount of profit per visitor possible with data-driven CRO</h1>
           <p>I help DTC & online retail teams turn traffic into revenue with rigorous research, clean UX, and disciplined experimentation. No fluff—just compounding wins.</p>
           <div class="actions">
             <a class="button button--primary" href="#contact" aria-label="Book a discovery call">Book a discovery call</a>
@@ -243,17 +219,7 @@
           </div>
         </div>
         <aside>
-          <div class="hero-card" aria-label="Snapshot">
-            <span class="eyebrow">What you get</span>
-            <h3 style="margin-top:.25rem">A scientific CRO program</h3>
-            <ul class="muted" style="padding-left:1.1rem;margin: .6rem 0 0">
-              <li>Deep quant + qual research</li>
-              <li>Prioritized testing roadmap</li>
-              <li>High‑velocity A/B tests</li>
-              <li>Landing page sprints</li>
-              <li>Analytics you can trust</li>
-            </ul>
-          </div>
+          <img class="hero-portrait" src="images/Untitled%20design%20(25).webp" alt="Andrea Chimienti" width="200" height="200" loading="eager" />
         </aside>
       </div>
     </section>
@@ -386,7 +352,7 @@
       <div class="container grid-2">
         <div>
           <span class="eyebrow">About</span>
-          <h2 id="about-title">Hi, I’m Your Name</h2>
+          <h2 id="about-title">Hi, I’m Andrea Chimienti</h2>
           <p>I’m a CRO specialist focused on e‑commerce. I pair rigorous research with crisp UX and persuasive copy to deliver measurable lift. I’ve run 150+ experiments for DTC brands from seed to 9‑figure revenue.</p>
           <p class="muted">Tools I speak: GA4, GTM, Hotjar, Amplitude, Looker Studio, Clarity, VWO/Optimizely, Shopify, Klaviyo. Methodologies I like: JTBD, PXL, heuristics, cohorting, and message‑market mapping.</p>
           <div class="actions" style="margin-top:.5rem">
@@ -395,7 +361,7 @@
           </div>
         </div>
         <aside class="card">
-          <img src="/images/photo_updated.jpg" alt="Photo of Your Name" class="about-photo" loading="lazy" width="640" height="800" />
+          <img src="/images/photo_updated.jpg" alt="Photo of Andrea Chimienti" class="about-photo" loading="lazy" width="640" height="800" />
           <h3 style="margin-top:1rem">Engagement Options</h3>
           <ul class="muted" style="padding-left:1.1rem;margin:.6rem 0 0">
             <li><strong>Starter Audit:</strong> 2‑week deep dive + roadmap</li>
@@ -493,7 +459,7 @@
 
   <footer role="contentinfo">
     <div class="container" style="display:flex;flex-wrap:wrap;align-items:center;gap:.75rem;justify-content:space-between">
-      <p>© <span id="year"></span> Your Name • CRO for E‑Commerce</p>
+      <p>© <span id="year"></span> Andrea Chimienti • CRO for E‑Commerce</p>
       <nav aria-label="Footer">
         <a class="muted" href="#services">Services</a>
         <span class="muted" aria-hidden="true">·</span>
@@ -509,7 +475,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Your Name",
+    "name": "Andrea Chimienti",
     "jobTitle": "CRO Consultant",
     "url": "https://<your-username>.github.io/",
     "image": "/images/photo_updated.jpg",
@@ -522,15 +488,6 @@
   </script>
 
   <script>
-    // Mobile menu toggle
-    const burger = document.getElementById('burger');
-    const mobileMenu = document.getElementById('mobileMenu');
-    burger?.addEventListener('click', () => {
-      const isOpen = mobileMenu.classList.toggle('open');
-      burger.setAttribute('aria-expanded', String(isOpen));
-    });
-    mobileMenu?.querySelectorAll('a').forEach(a => a.addEventListener('click', () => mobileMenu.classList.remove('open')));
-
     // Counters on scroll
     const counters = document.querySelectorAll('[data-counter]');
     const format = (el, v) => {
