--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     .metrics{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:1rem;margin-top:1.25rem}
     .metric{background:#fff;border:1px solid var(--border);border-radius:var(--radius);padding:1rem;text-align:center;box-shadow:var(--shadow)}
     .metric strong{display:block;font-size:1.6rem;letter-spacing:-.01em;color:var(--green-900)}
-    .hero-portrait{width:200px;height:auto;border-radius:500px;border:1px solid var(--border);box-shadow:var(--shadow);display:block;margin-inline:auto}
+    .hero-portrait{width:300px;height:auto;border-radius:500px;display:block;margin-inline:auto}
 
     @media (max-width: 900px){
       .hero .grid{grid-template-columns:1fr}
@@ -197,8 +197,8 @@
       <div class="container grid">
         <div>
           <span class="kicker"><span class="dot"></span>Conversion Rate Optimization</span>
-          <h1>Squeeze the most amount of profit per visitor possible with data-driven CRO</h1>
-          <p>I help DTC & online retail teams turn traffic into revenue with rigorous research, clean UX, and disciplined experimentation. No fluff—just compounding wins.</p>
+          <h1>Squeeze The Most Out Of Your Already Existing Traffic With Data-Driven CRO</h1>
+          <p>I help DTC E-commerce brands make more profit per visitor with the same amount of adspend through research-backed data-driven CRO.</p>
           <div class="actions">
             <a class="button button--primary" href="#contact" aria-label="Book a discovery call">Book a discovery call</a>
             <a class="button button--ghost" href="#work" aria-label="See case studies">See case studies</a>
